# eidolonfs

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: publish.yml  smoke.yml
examples/: layout.csv
src/eidolonfs/: __init__.py  cli.py  content.py  events.py  layout.py  platform_support.py  vfs.py
tests/: test_cli.py  test_content.py  test_events.py  test_layout.py  test_mount.py
